@@ -142,18 +142,18 @@ public class TableHistograms extends NodeToolCmd
                 double[] sstablesPerRead = probe.metricPercentilesAsArray((CassandraMetricsRegistry.JmxHistogramMBean) probe.getColumnFamilyMetric(keyspace, table, "SSTablesPerReadHistogram"));
 
                 System.out.println(format("%s/%s histograms", keyspace, table));
-                System.out.println(format("%-10s%10s%18s%18s%18s%18s",
-                        "Percentile", "SSTables", "Write Latency", "Read Latency", "Partition Size", "Cell Count"));
-                System.out.println(format("%-10s%10s%18s%18s%18s%18s",
-                        "", "", "(micros)", "(micros)", "(bytes)", ""));
+                System.out.println(format("%-10s%18s%18s%18s%18s%18s",
+                        "Percentile", "Read Latency", "Write Latency", "SSTables", "Partition Size", "Cell Count"));
+                System.out.println(format("%-10s%18s%18s%18s%18s%18s",
+                        "", "(micros)", "(micros)", "", "(bytes)", ""));
 
                 for (int i = 0; i < percentiles.length; i++)
                 {
-                    System.out.println(format("%-10s%10.2f%18.2f%18.2f%18.0f%18.0f",
+                    System.out.println(format("%-10s%18.2f%18.2f%18.2f%18.0f%18.0f",
                             percentiles[i],
+			    readLatency[i],
+			    writeLatency[i],
                             sstablesPerRead[i],
-                            writeLatency[i],
-                            readLatency[i],
                             estimatedRowSizePercentiles[i],
                             estimatedColumnCountPercentiles[i]));
                 }
