@@ -1,4 +1,5 @@
 4.0
+ * Make Read and Write Latency columns are consistent for proxyhistograms and cfhistograms (CASSANDRA-11939)
  * Make protocol checksum type option case insensitive (CASSANDRA-14716)
  * Forbid re-adding static columns as regular and vice versa (CASSANDRA-14913)
  * Audit log allows system keyspaces to be audited via configuration options (CASSANDRA-14498)
